--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -20,7 +20,7 @@
 <div class="top-bar">
 <div class="row">
     <div class="large-9 large-centered columns">
-        <h1>
+        <h1 class="site-title">
             <a href="{{ SITEURL }}">{{ SITENAME }}</a>
         </h1>
     </div>
