--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -76,3 +76,35 @@ hr.gradient {
 }
 
 body { background-color: #ffffff; }
+
+h1.entry-title {
+    font-size: 1.17em;
+}
+
+h1.site-title {
+    font-size: 2em;
+}
+
+h1 {
+    font-size: 1em;
+}
+
+h2 {
+    font-size: .9em;
+}
+
+h3 {
+    font-size: .8em;
+}
+
+h4 {
+    font-size: .75em;
+}
+
+h5 {
+    font-size: .7em;
+}
+
+h6 {
+    font-size: .67em;
+}
