--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -76,3 +76,10 @@ hr.gradient {
 }
 
 body { background-color: #ffffff; }
+
+.note {
+    background-color: #f0f0f0;
+    padding: 2em;
+    margin: 1em;
+    border: 1px solid #ccc;
+}
