--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -45,7 +45,7 @@
 <div class="row">
 
     <!-- Main Blog Content -->
-    <div class="large-12 columns">
+    <div class="large-12 columns text-justify">
     {% block content %}{% endblock %}
     </div>
     <!-- End Main Content -->
