--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -77,9 +77,34 @@ hr.gradient {
 
 body { background-color: #ffffff; }
 
-.note {
-    background-color: #f0f0f0;
-    padding: 2em;
-    margin: 1em;
-    border: 1px solid #ccc;
+h1.entry-title {
+    font-size: 1.7em;
+}
+
+h1.site-title {
+    font-size: 1.5em;
+}
+
+h1 {
+    font-size: 1.5em;
+}
+
+h2 {
+    font-size: 1.4em;
+}
+
+h3 {
+    font-size: 2.3em;
+}
+
+h4 {
+    font-size: 1.25em;
+}
+
+h5 {
+    font-size: 1.2em;
+}
+
+h6 {
+    font-size: 1.23em;
 }
