--- a/alchemy-theme/alchemy/templates/include/header.html
+++ b/alchemy-theme/alchemy/templates/include/header.html
@@ -17,11 +17,11 @@
           <li class="list-inline-item"><a href="{{ link }}" target="_blank">{{ title }}</a></li>
         {% endfor %}
         {% if DISPLAY_PAGES_ON_MENU %}
-          {% for page in pages %}
+          {% for title, link in MENUITEMS %}
             {% if LINKS and loop.first %}
               <li class="list-inline-item text-muted">|</li>
             {% endif %}
-            <li class="list-inline-item"><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
+            <li class="list-inline-item"><a href="{{ link }}">{{ title }}</a></li>
           {% endfor %}
         {% endif %}
         {% for icon, link in ICONS %}
