--- a/alchemy-theme/alchemy/templates/include/header.html
+++ b/alchemy-theme/alchemy/templates/include/header.html
@@ -21,7 +21,7 @@
             {% if LINKS and loop.first %}
               <li class="list-inline-item text-muted">|</li>
             {% endif %}
-            <li class="list-inline-item"><a href="{{ link }}">{{ title }}</a></li>
+            <li class="list-inline-item"><a href="{{ SITEURL }}/{{ link }}">{{ title }}</a></li>
           {% endfor %}
         {% endif %}
         {% for icon, link in ICONS %}
