alchemy-theme templates: Support absolute http urls in MENUITEMS
This lets us link to an external site through the main menu.

--- a/alchemy-theme/alchemy/templates/include/header.html
+++ b/alchemy-theme/alchemy/templates/include/header.html
@@ -21,7 +21,11 @@
             {% if LINKS and loop.first %}
               <li class="list-inline-item text-muted">|</li>
             {% endif %}
-            <li class="list-inline-item"><a href="{{ SITEURL }}/{{ link }}">{{ title }}</a></li>
+	    {% if link.startswith('http') %}
+              <li class="list-inline-item"><a href="{{ link }}">{{ title }}</a></li>
+            {% else %}
+              <li class="list-inline-item"><a href="{{ SITEURL }}/{{ link }}">{{ title }}</a></li>
+            {% endif %}
           {% endfor %}
         {% endif %}
         {% for icon, link in ICONS %}
