update header and footer

--- a/alchemy-theme/alchemy/templates/include/header.html
+++ b/alchemy-theme/alchemy/templates/include/header.html
@@ -23,6 +23,8 @@
             {% endif %}
 	    {% if link.startswith('http') %}
               <li class="list-inline-item"><a href="{{ link }}">{{ title }}</a></li>
+	    {% elif link.startswith('irc') %}
+              <li class="list-inline-item"><a href="{{ link }}">{{ title }}</a></li>
             {% else %}
               <li class="list-inline-item"><a href="{{ SITEURL }}/{{ link }}">{{ title }}</a></li>
             {% endif %}
